--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,10 @@ body {
   border-radius: 15px;
 }
 
+label{
+  user-select: none;
+}
+
 .nav-container-item-01 {
   width: 100%;
   height: 5rem;
@@ -543,7 +547,7 @@ a:link {
 }
 
 .packages-card-01 {
-  height: 74rem;
+  height: fit-content;
   background-color: var(--background-color-01);
   display: flex;
   align-items: center;
@@ -565,13 +569,19 @@ a:link {
   width: 80%;
   justify-content: center;
   margin-top: 5rem;
+  margin-bottom: 2rem;
 }
 
 .packages-card-01-item {
+  border: 1px solid var(--border-color-01);
+  border-radius: 15px;
+  margin: 1rem;
+  padding: .5rem;
   width: 26rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 2rem;
 }
 
 .packages-card-01-item-title {
@@ -974,9 +984,8 @@ p {
   font-size: 42px;
 }
 
-input {
-  border: none;
-  height: min-content;
+input{
+  border: 1px solid var(--border-color-01);
 }
 
 .form-contact {
@@ -1486,6 +1495,7 @@ input {
 }
 
 .booking-card-02-form-data-name {
+  user-select: none;
   margin: 1rem;
   padding-bottom: 1rem;
   font-size: 18px;
@@ -1578,6 +1588,7 @@ input {
   cursor: pointer;
   border-radius: 15px;
   transition: 0.2s;
+  border: none;
 }
 
 .submit-button:hover {
@@ -1750,6 +1761,11 @@ label {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.packages-info-title{
+  font-size: 42px;
+  color: var(--font-color-04);
 }
 
 .loc-list-show {
@@ -2226,6 +2242,37 @@ label {
 }
 
 @media only screen and (max-width: 480px) {
+
+  .submit-button-container{
+    margin-top: 1rem;
+    padding-right: 0;
+    justify-content: center;
+  }
+
+  .booking-card-02-form-data{
+    width: 21rem;
+  }
+
+  .booking-list-item{
+    font-size: 16px;
+  }
+
+  .booking-card-02-form-data-name{
+    margin: 0;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: start;
+  }
+
+  .booking-card-02-form-data-desc{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .booking-card-02-title{
+    font-size: 28px;
+  }
+
   .card-03-img {
     width: 80%;
   }
@@ -2261,6 +2308,45 @@ label {
 }
 
 @media only screen and (max-width: 379px) {
+  .booking-card-02-form-data-hover{
+    text-align: start;
+  }
+
+  .booking-card-02-form-data-input{
+    width: 10rem;
+    padding: 0;
+    margin: 0;
+  }
+
+  .booking-card-02-form-data-hover{
+    font-size: 15px;
+  }
+
+  .booking-card-02-form-data{
+    width: 16rem;
+    padding: .5rem
+  }
+
+  .booking-list-item{
+    font-size: 16px;
+  }
+
+  .booking-card-02-form-data-name{
+    margin: 0;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: start;
+  }
+
+  .booking-card-02-form-data-desc{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .booking-card-02-title{
+    font-size: 28px;
+  }
+
   .card-02 {
     height: 84rem;
   }
